--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'thronesdb';
+  src: url('../fonts/thronesdb.ttf?irjt2b') format('truetype')
+}
+
+.thronesfont {
+  font-family: 'thronesdb';
+  padding: 10px;
+}
+
 @media print {
   #content {
     padding: 0
@@ -25,7 +35,7 @@
     page-break-after: auto;
     display: block;
   }
-#img-section {
+  #img-section {
     page-break-inside: avoid;
     -webkit-region-break-inside: avoid;
     position: relative;
@@ -44,4 +54,115 @@
   width: 224px;
   float: left;
   display: block;
+}
+
+
+@font-face {
+  font-family: 'thronesdb';
+  src: url('https://thronesdb.com/bundles/app/fonts/thronesdb.eot?irjt2b');
+  src: url('https://thronesdb.com/bundles/app/fonts/thronesdb.eot?#iefixirjt2b') format('embedded-opentype'), url('https://thronesdb.com/bundles/app/fonts/thronesdb.ttf?irjt2b') format('truetype'), url('https://thronesdb.com/bundles/app/fonts/thronesdb.woff?irjt2b') format('woff'), url('https://thronesdb.com/bundles/app/fonts/thronesdb.svg?irjt2b#thronesdb') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'thronesdb';
+  speak: none;
+  font-style: normal;
+  font-size: 30px;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale
+}
+
+.iconsbanner{
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.icon-baratheon:before {
+  content: "\e600"
+}
+
+.icon-greyjoy:before {
+  content: "\e601"
+}
+
+.icon-intrigue:before {
+  content: "\e602"
+}
+
+.icon-lannister:before {
+  content: "\e603"
+}
+
+.icon-martell:before {
+  content: "\e604"
+}
+
+.icon-military:before {
+  content: "\e605"
+}
+
+.icon-thenightswatch:before {
+  content: "\e606"
+}
+
+.icon-power:before {
+  content: "\e607"
+}
+
+.icon-stark:before {
+  content: "\e608"
+}
+
+.icon-targaryen:before {
+  content: "\e609"
+}
+
+.icon-tyrell:before {
+  content: "\e60a"
+}
+
+.icon-unique:before {
+  content: "\e60b"
+}
+
+.icon-plot:before {
+  content: "\e60c"
+}
+
+.icon-location:before {
+  content: "\e60e"
+}
+
+.icon-character:before {
+  content: "\e60f"
+}
+
+.icon-event:before {
+  content: "\e610"
+}
+
+.icon-agenda:before {
+  content: "\e611"
+}
+
+.icon-attachment:before {
+  content: "\e60d"
+}
+
+.icon-neutral:before {
+  content: "\e612"
+}
+
+.icon-tyrell{
+  background-color: #509F16;
+}
+
+.icon-baratheon{
+  background-color: #E3D852;
 }
